updating the project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 </section>
 <body>
     <section class="first-page">
+      <div class="first-page">
         <img class="" src="./img/CONRAD_first_page.webp" alt="happy people">
+      </div>
     </section>
 
     <section class="introduction">
@@ -54,10 +56,10 @@
           </div>
     </section>
 
-    <section class="section mid-town">
+    <section class="section1 mid-town">
         <div class="dinning">
             <h2>MIDTOWN DINING</h2>
-            <p>We're elevating Manhattan's restaurant scene with contemporary takes on the classics you love. Fusing global flavors and innovative techniques, our style of cooking pays homage to the dynamic spirit of the city we call home.</p>
+            <p style="font-size: 1rem;">We're elevating Manhattan's restaurant scene with contemporary takes on the classics you love. Fusing global flavors and innovative techniques, our style of cooking pays homage to the dynamic spirit of the city we call home.</p>
         </div>
         <div class="img-div"><img class="mid-town image1" src="./img/CONRAD_thrid_page.webp"></div>
         <div ><img class="mid-town image2"src="./img/Dabble_Drinks.webp" alt="drinks"></div>
